fix modal background and header link wrap

--- a/sass/base/_index.scss
+++ b/sass/base/_index.scss
@@ -16,10 +16,6 @@ body {
    font-family: Helvetica, Arial, sans-serif;
 }
 
-body > *:nth-child(even) {
-   background-color: vars.$col-bg;
-}
-
 p {
    line-height: 24px;
 }
