--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,7 @@
 
 .cta-buttons {
    display: flex;
+   flex-wrap: wrap;
    gap: 1rem;
    margin-top: 1rem;
    white-space: nowrap;
